<?xml version="1.0"?>
<package format="2">
  <name>cpr_onav_mission_manager_msgs</name>
  <version>0.0.0</version>
  <description>The cpr_onav_mission_manager_msgs package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>Clearpath Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>onav_ms2_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
