<?xml version="1.0"?>
<package format="2">
  <name>cpr_platform_msgs</name>
  <version>0.0.0</version>
  <description>ROS package containing the message definitions for the Clearpath Robotics platform.</description>
  <maintainer email="jmastrangelo@clearpathrobotics.com">José Mastrangelo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>
